Tab modal print shows blank on parent process pages
Categories
(Toolkit :: Printing, defect)
Tracking
()
People
(Reporter: mstriemer, Assigned: emilio)
References
Details
Crash Data
Attachments
(1 file)
|
48 bytes,
text/x-phabricator-request
|
pascalc
:
approval-mozilla-beta+
|
Details | Review |
With the changes for the simplify page mode from bug 1666247, the tab modal print crashes on the about:sessionrestore page. There's a patch there to disable the dialog, but this should be investigated and fixed.
Comment 1•5 years ago
|
||
I'd bet this is because about:sessionrestore is a parent process page. Thunderbird is also now crashing when printing from the parent process. Please have a look soon, this is pretty important for us, and our one release for the year is just around the corner.
If this line runs, it crashes. I'll keep digging but you'll have a better idea than I do.
| Reporter | ||
Comment 2•5 years ago
|
||
Emilio had a fix for this in bug 1718204 but it hasn't landed yet. Maybe that will help with Thunderbird?
Comment 3•5 years ago
|
||
(In reply to Mark Striemer [:mstriemer] from comment #2)
Emilio had a fix for this in bug 1718204 but it hasn't landed yet. Maybe that will help with Thunderbird?
With this fix TB does no more crash. The print dialog appears but the "Preparing preview" isn't shown and the preview is empty.
| Reporter | ||
Comment 4•5 years ago
|
||
Emilio, any idea why the preview might not be loading with the fix from bug 1718204?
Comment 5•5 years ago
|
||
I agree with Richard's assessment. The browser's there and visible (you can set the CSS background colour and that shows), but it's empty.
On 92.0a1 (2021-07-13) (64-bit)
I agree with Comment 5:
a) if I rt-mouse on any email in the message list I get the PrinPreview pages, printer details are complete but the print preview frame is empty
b) open same email and file -> print makes TB crash.
Re Wayne's question in Thunderbird bug 1720397, seems to be same result on any mail I tried.
Updated•5 years ago
|
| Assignee | ||
Updated•5 years ago
|
| Assignee | ||
Comment 8•5 years ago
|
||
We need to be displayed when cloning into a same-process frame, so that
the preview code hooks up to the view tree correctly and the frame is
correctly painted.
This works for out-of-process frames, but mostly by chance.
Fortify the printPreview() API code to gracefully handle that case, and
remove the sessionrestore special-case which is not really special.
| Assignee | ||
Updated•5 years ago
|
Comment 9•4 years ago
|
||
(in case it's not obvious) very much need an uplift to 91 beta
| Assignee | ||
Comment 10•4 years ago
|
||
[Tracking Requested - why for this release]: Printing parent process pages crashes.
| Assignee | ||
Updated•4 years ago
|
Updated•4 years ago
|
Comment 11•4 years ago
|
||
Thanks for setting tracking.
I don't know about Firefox, but this is a blocker for releasing TB91. (I hesitate to use that severity)
Comment 12•4 years ago
|
||
Comment 13•4 years ago
|
||
| bugherder | ||
| Assignee | ||
Comment 14•4 years ago
|
||
Comment on attachment 9231361 [details]
Bug 1714639 - Don't call FrameLoader.printPreview in hidden frames. r=mstriemer,jfkthame
Beta/Release Uplift Approval Request
- User impact if declined: Parent process pages show blank until print settings are changed at least once.
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: Yes
- If yes, steps to reproduce: comment 0
- List of other uplifts needed: none
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): relatively simple fix
- String changes made/needed: none
| Assignee | ||
Updated•4 years ago
|
Comment 15•4 years ago
•
|
||
Comment on attachment 9231361 [details]
Bug 1714639 - Don't call FrameLoader.printPreview in hidden frames. r=mstriemer,jfkthame
Approved for 91 beta 7 beta 8, thanks.
Updated•4 years ago
|
Comment 16•4 years ago
|
||
| bugherder uplift | ||
Comment 19•4 years ago
|
||
Reproduced both problems (the initial one with Fx 91.0b4, and the current one after a fix for 1718204 landed with Fx 91.0b5) on Windows 10. .
Verified fixed with Fx 92.0a1 (2021-07-26) and Fx 91.0b8 (treeherder build) on Windows 10, macOS 11.0, Ubuntu 18.04
Updated•4 years ago
|
Description
•